--- a/index.html
+++ b/index.html
@@ -1086,11 +1086,10 @@ document.addEventListener('DOMContentLoaded', function () {
           isIframe: false,
         },
 
-        auth: {
-          type: 'token',
-          token: 'cztei_03JtqQqDwyjuYglFS07W6Uv3GBLNHY2xnKvsPsNtYjmTh7E9TPlxKx4jAwaZyjcaG',
-          onRefreshToken: async () => 'token'
-        },
+auth: {
+  type: 'unauth'
+},
+
 
         userInfo: {
           id: 'user',
