--- a/index.html
+++ b/index.html
@@ -1142,21 +1142,15 @@ auth: {
   
 
 <style>
-  /* Forzamos el color azul institucional en el botón circular */
-  .coze-asst-btn {
-    background-color: #004E85 !important;
-  }
+/* ===== COZE CHAT SCROLL FIX PC + MOBILE ===== */
 
- /* ===== FIX TOTAL CHAT COZE ===== */
-
-/* Evitar scroll horizontal y problemas de viewport */
 html, body {
   width: 100%;
   height: 100%;
   overflow-x: hidden !important;
 }
 
-/* Contenedor principal del chat */
+/* Ventana del chat */
 #coze-webchat-container,
 .coze-webchat {
   height: 100vh !important;
@@ -1165,29 +1159,27 @@ html, body {
   flex-direction: column !important;
 }
 
-/* Área de mensajes */
-.coze-chat-wrapper,
+/* Contenedor interno */
+.coze-chat-wrapper {
+  flex: 1 1 auto !important;
+  min-height: 0 !important;
+  display: flex !important;
+  flex-direction: column !important;
+}
+
+/* Mensajes */
 .coze-chat-body,
 .coze-chat-messages {
   flex: 1 1 auto !important;
-  min-height: 0 !important;   /* CLAVE para que funcione el scroll en flex */
+  min-height: 0 !important; /* ESTA línea habilita el scroll */
   overflow-y: auto !important;
-  overscroll-behavior: contain;
 }
 
-/* Área inferior (input + sugerencias) */
+/* Footer (input + sugerencias) */
 .coze-chat-footer,
 .coze-chat-input,
 .coze-suggest-questions {
   flex-shrink: 0 !important;
-}
-
-/* Botón flotante fijo dentro del viewport */
-.coze-asst-btn {
-  position: fixed !important;
-  right: 12px !important;
-  bottom: 12px !important;
-  z-index: 2147483647 !important;
 }
 
 
