--- a/index.html
+++ b/index.html
@@ -1074,7 +1074,8 @@ document.addEventListener('DOMContentLoaded', function () {
 </script>
 
   <!-- SDK de Coze -->
-  <script src="https://sf-cdn.coze.com/obj/unpkg-va/flow-platform/chat-app-sdk/1.2.0-beta.10/libs/oversea/index.js"></script>
+<script src="https://sf-cdn.coze.com/obj/unpkg-va/flow-platform/chat-app-sdk/1.2.0/libs/index.js"></script>
+
 
   <!-- Inicialización del chatbot -->
   <script>
