--- a/chat.html
+++ b/chat.html
@@ -1,65 +1,12 @@
 <!DOCTYPE html>
-<html lang="es">
-<head>
-  <meta charset="UTF-8" />
-  <title>Chat C.U.R.A.</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-  <!-- SDK Coze estable -->
-  <script src="https://sf-cdn.coze.com/obj/unpkg-va/flow-platform/chat-app-sdk/1.2.0/libs/index.js"></script>
-
-  <style>
-    html, body {
-      margin: 0;
-      height: 100%;
-      overflow: hidden;
-      background: #fff;
-    }
-    #chat-root {
-      width: 100%;
-      height: 100%;
-    }
-  </style>
-</head>
-<body>
-
-<div id="chat-root"></div>
-
-<script>
-  console.log("SDK:", window.CozeWebSDK);
-
-  new CozeWebSDK.WebChatClient({
-    config: {
-      type: "bot",
-      bot_id: "7596429833782214709",
-      isIframe: false,
-    },
-
-    auth: {
-      type: "token",
-      token: "",
-      onRefreshToken: async () => {
-        const res = await fetch("/api/coze-token");
-        const data = await res.json();
-        console.log("TOKEN:", data);
-        return data.token;
-      }
-    },
-
-    ui: {
-      asstBtn: { isNeed: false },
-
-      chatBot: {
-        el: document.getElementById("chat-root"),
-        title: "Asistente C.U.R.A.",
-        uploadable: false,
-      },
-
-      header: { isShow: false },
-      footer: { isShow: false },
-    },
-  });
-</script>
-
-</body>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="./main.css" />
+  </head>
+  <body>  
+    <!-- Install SDK -->
+    <script src="https://sf-cdn.coze.com/obj/unpkg-va/flow-platform/chat-app-sdk/1.2.0-beta.10/libs/oversea/index.js"></script>
+    <script src="./index.js"></script>
+  </body>
 </html>
