--- a/index.html
+++ b/index.html
@@ -1073,11 +1073,6 @@ document.addEventListener('DOMContentLoaded', function () {
   
 </script>
 
-<!-- SDK Coze -->
-<!-- Install SDK --> 
-  <script src="https://sf-cdn.coze.com/obj/unpkg-va/flow-platform/chat-app-sdk/1.2.0-beta.10/libs/oversea/index.js"></script> 
-  <script src="./index.js"></script>
-
   
 <script src="https://unpkg.com/lenis@1.1.13/dist/lenis.min.js"></script> 
 <script>
@@ -1101,5 +1096,65 @@ document.addEventListener('DOMContentLoaded', function () {
   });
 </script>
 
+
+<!-- Botón flotante -->
+<button id="chat-open-btn"
+  style="
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    z-index: 9999;
+    background:#00C2FF;
+    color:#00345C;
+    border-radius:9999px;
+    padding:12px 18px;
+    font-weight:600;
+    box-shadow:0 10px 30px rgba(0,0,0,.3);
+  ">
+  Asistente C.U.R.A.
+</button>
+
+<!-- Contenedor del chat -->
+<div id="chat-modal"
+  style="
+    position: fixed;
+    inset: 0;
+    background: rgba(0,0,0,.6);
+    display: none;
+    z-index: 9998;
+  ">
+
+  <div
+    style="
+      position:absolute;
+      bottom:20px;
+      right:20px;
+      width:390px;
+      height:600px;
+      background:#0b1f33;
+      border-radius:16px;
+      overflow:hidden;
+      box-shadow:0 20px 50px rgba(0,0,0,.5);
+    ">
+
+    <iframe
+      src="/chat.html"
+      style="width:100%; height:100%; border:0;">
+    </iframe>
+
+  </div>
+</div>
+
+<script>
+  const btn = document.getElementById('chat-open-btn');
+  const modal = document.getElementById('chat-modal');
+
+  btn.onclick = () => modal.style.display = 'block';
+  modal.onclick = (e) => {
+    if (e.target === modal) modal.style.display = 'none';
+  };
+</script>
+
+  
 </body>
 </html>
