--- a/index.html
+++ b/index.html
@@ -1096,65 +1096,54 @@ document.addEventListener('DOMContentLoaded', function () {
   });
 </script>
 
+<button id="openChat">💬</button>
 
-<!-- Botón flotante -->
-<button id="chat-open-btn"
-  style="
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    z-index: 9999;
-    background:#00C2FF;
-    color:#00345C;
-    border-radius:9999px;
-    padding:12px 18px;
-    font-weight:600;
-    box-shadow:0 10px 30px rgba(0,0,0,.3);
-  ">
-  Asistente C.U.R.A.
-</button>
-
-<!-- Contenedor del chat -->
-<div id="chat-modal"
-  style="
-    position: fixed;
-    inset: 0;
-    background: rgba(0,0,0,.6);
-    display: none;
-    z-index: 9998;
-  ">
-
-  <div
-    style="
-      position:absolute;
-      bottom:20px;
-      right:20px;
-      width:390px;
-      height:600px;
-      background:#0b1f33;
-      border-radius:16px;
-      overflow:hidden;
-      box-shadow:0 20px 50px rgba(0,0,0,.5);
-    ">
-
-    <iframe
-      src="/chat.html"
-      style="width:100%; height:100%; border:0;">
-    </iframe>
-
-  </div>
+<style>
+#openChat{
+  position: fixed;
+  right: 20px;
+  bottom: 20px;
+  z-index: 9999;
+  border: none;
+  border-radius: 50%;
+  width: 56px;
+  height: 56px;
+  font-size: 24px;
+  cursor: pointer;
+}
+</style>
+<div id="chatModal">
+  <iframe src="/chat.html"></iframe>
 </div>
 
-<script>
-  const btn = document.getElementById('chat-open-btn');
-  const modal = document.getElementById('chat-modal');
+<style>
+#chatModal{
+  position: fixed;
+  right: 20px;
+  bottom: 90px;
+  width: 390px;
+  height: 600px;
+  display: none;
+  z-index: 9999;
+  border-radius: 12px;
+  overflow: hidden;
+}
 
-  btn.onclick = () => modal.style.display = 'block';
-  modal.onclick = (e) => {
-    if (e.target === modal) modal.style.display = 'none';
-  };
+#chatModal iframe{
+  width:100%;
+  height:100%;
+  border:0;
+}
+</style>
+<script>
+const btn = document.getElementById("openChat");
+const modal = document.getElementById("chatModal");
+
+btn.onclick = () => {
+  modal.style.display =
+    modal.style.display === "block" ? "none" : "block";
+};
 </script>
 
-  
 </body>
 </html>
