--- a/index.html
+++ b/index.html
@@ -1096,54 +1096,54 @@ document.addEventListener('DOMContentLoaded', function () {
   });
 </script>
 
+<!-- BOTÓN -->
 <button id="openChat">💬</button>
+
+<!-- CONTENEDOR CHAT -->
+<div id="chatBox">
+  <iframe src="/chat.html" loading="lazy"></iframe>
+</div>
 
 <style>
 #openChat{
   position: fixed;
-  right: 20px;
   bottom: 20px;
+  right: 20px;
   z-index: 9999;
-  border: none;
+  padding: 12px 14px;
   border-radius: 50%;
-  width: 56px;
-  height: 56px;
-  font-size: 24px;
+  border: none;
   cursor: pointer;
 }
-</style>
-<div id="chatModal">
-  <iframe src="/chat.html"></iframe>
-</div>
 
-<style>
-#chatModal{
+#chatBox{
   position: fixed;
+  bottom: 80px;
   right: 20px;
-  bottom: 90px;
   width: 390px;
   height: 600px;
+  max-height: 80vh;
   display: none;
   z-index: 9999;
+  background: white;
   border-radius: 12px;
   overflow: hidden;
 }
 
-#chatModal iframe{
-  width:100%;
-  height:100%;
-  border:0;
+#chatBox iframe{
+  width: 100%;
+  height: 100%;
+  border: 0;
 }
 </style>
-<script>
-const btn = document.getElementById("openChat");
-const modal = document.getElementById("chatModal");
 
-btn.onclick = () => {
-  modal.style.display =
-    modal.style.display === "block" ? "none" : "block";
-};
+<script>
+document.getElementById("openChat").addEventListener("click", () => {
+  const box = document.getElementById("chatBox");
+  box.style.display = box.style.display === "block" ? "none" : "block";
+});
 </script>
+
 
 </body>
 </html>
