--- a/index.html
+++ b/index.html
@@ -1080,6 +1080,12 @@ document.addEventListener('DOMContentLoaded', function () {
     duration: 1.2,
     easing: (t) => Math.min(1, 1.001 - Math.pow(2, -10 * t)),
     smoothWheel: true
+    // Añadimos esta línea para evitar conflictos con elementos táctiles y otros componentes
+  prevent: (node) => {
+    // Esto detecta si el elemento clickeado o scrolleado pertenece al chatbot de Coze
+    return node.closest('.coze-web-chat-client-container') || 
+           node.closest('#coze-chat-container'); 
+  }
   });
 
   function raf(time) {
