--- a/index.html
+++ b/index.html
@@ -1111,6 +1111,7 @@ window.addEventListener("load", () => {
     config: {
       type: "bot",
       bot_id: "7596429833782214709",
+      el: document.getElementById('my-coze-chat'), // Apuntar al div con prevent
       isIframe: false,
     },
 
@@ -1151,6 +1152,7 @@ window.addEventListener("load", () => {
 });
 </script>
 
-
+<div id="my-coze-chat" data-lenis-prevent></div>
+  
 </body>
 </html>
