--- a/index.html
+++ b/index.html
@@ -1126,7 +1126,10 @@ requestAnimationFrame(raf);
   });
 </script>
 
-<!-- SDK Coze -->
+
+
+<div id="my-coze-chat" data-lenis-prevent>
+  <!-- SDK Coze -->
 <script src="https://sf-cdn.coze.com/obj/unpkg-va/flow-platform/chat-app-sdk/1.2.0-beta.10/libs/oversea/index.js"></script>
 
 <script>
@@ -1175,8 +1178,7 @@ window.addEventListener("load", () => {
   });
 });
 </script>
-
-<div id="my-coze-chat" data-lenis-prevent></div>
+</div>
   
 </body>
 </html>
